Versione 3.1.0
-JTextArea per modificare la dimensione del font;
+JSpinner per modificare la dimensione del font e relativo listener;
+JPopupMenu e relativi sotto menù, menù items e listeners;
*Modifiche minori;
+Jar eseguibile 3.1.0;
+Icona dell'applicazione in formato .ico.